--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -32,18 +32,14 @@ body {
   width: 0;
   height: ~"@{height}";
   border: solid @border-color;
-  border-width: 0 1px 0 1px;
+  border-top-color: @brand-primary;
+  border-width: 4px 1px 0 1px;
   .box-shadow(0 1px 5px #ddd);
   // margin-top: -2px;
   overflow: hidden;
   z-index: @zindex-navbar-fixed;
   .transition(width ease .5s);
   background-color: #fff;
-
-  .top-border {
-    background: @brand-primary; 
-    height: 4px;
-  }
 }
 
 .site-menu-inner {
@@ -93,6 +89,24 @@ body {
         color: #fff;
       }
     }
+  }
+}
+
+.site-user-menu {
+  padding: 20px;
+  padding-bottom: 0;
+  img {
+    float: left;
+    width: 45px;
+    margin-right: 8px;
+  }
+  a {
+    font-size: 12px;
+  }
+  .username {
+    color: #333;
+    font-size: 13px;
+    font-weight: bold;
   }
 }
 
