--- a/src/Adstacy/AppBundle/Resources/public/less/layout/register.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/register.less
@@ -1,7 +1,16 @@
 @import "../variables.less";
 
 #register {
+  .panel-heading {
+    padding: 8px 15px 6px;
+  }
+  .panel-heading h2 {
+    font-family: Verdana, Geneva, sans-serif;
+    font-weight: normal;
+  }
+
   hr {
+    border-top: 1px solid #ddd;
     margin: 0;
   }
 
