Changed settings page to single column.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/login.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/login.less
@@ -1,7 +1,12 @@
 @import "../variables.less";
 
 #login {
+  .panel-heading {
+    padding: 12px 15px 10px;
+  }
+
   hr {
+    border-top: 1px solid #ddd;
     margin: 0;
   }
 
