--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="login">
+  <div id="login" class="column">
     <div class="panel panel-default">
       <div class="panel-heading"><h2>Login</h2></div>
 
