Revert brand primary.

--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,8 +1,8 @@
 @import "./bootstrap/variables.less";
 
 @body-bg:                     #eee;
-// @brand-primary:               #b00;
-@brand-primary:               #ff1e00;
+@brand-primary:               #b00;
+//@brand-primary:               #ff1e00;
 @input-border-focus:          #bbb;
 @jumbotron-color:             #333;
 @jumbotron-bg:                transparent;
