fix user menu structure and header-style.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -107,12 +107,14 @@
           <div class="site-menu">
             <nav id="site-menu-inner" class="site-menu-inner">
               {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                <div class="site-user-menu">
-                    <a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">
-                      <img src="{{ profile_pic(app.user) }}" alt="{{ app.user.username }}">
-                    </a>
-                    <a class="username" href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" title="{{ "profile"|trans }}">{{ app.user.username }}</a> 
+                <div class="site-user-menu media">
+                  <a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" class="pull-left">
+                    <img src="{{ profile_pic(app.user) }}" alt="{{ app.user.username }}" width="32" height="32" class="media-object">
+                  </a>
+                  <div class="media-body">
+                    <a class="username" href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" title="{{ "profile"|trans }}">{{ app.user.realname }}</a><br>
                     <a href="{{ path('fos_user_security_logout') }}" title="{{ "logout"|trans }}">{{ "logout"|trans }}</a>
+                  </div>
                 </div>
               {% endif %}
               <ul class="site-main-menu">
