Beaturify profile page.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -104,9 +104,12 @@ body {
     font-size: 12px;
   }
   .username {
-    color: #333;
+    color: #666;
     font-size: 13px;
     font-weight: bold;
+  }
+  .username:hover {
+    color: #333;
   }
 }
 
