--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -172,7 +172,15 @@ a.mention:hover {
   padding: 20px;
   border: 2px dashed #aaa;
   text-shadow: 1px 1px 0 #fff;
-  .box-shadow(inset 0 0 10px rgba(0,0,0,.2));
+
+  .btn-lg {
+    padding: 0 12px 0 0;
+  }
+
+  .icon-plus {
+    border-right: 1px solid #74bf36;
+    padding: 10px;
+  }
 }
 
 // .loader-img {
