--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -1,12 +1,15 @@
 .users {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   width: 500px;
 
   .media {
     margin: 0;
   }
   h2 {
-    font-size: 24px;
-    padding: 5px 10px;
+    font-size: 18px;
+    padding: 12px 10px;
     margin: 0;
     border-bottom: 1px solid #eee;
   }
@@ -18,6 +21,7 @@
   border-bottom: 1px solid #eee;
 
   p {
+    font-size: 12px;
     margin: 0;
   }
 
