Add js translation.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -76,7 +76,7 @@
                 </a>
               </li>
               <li>
-                <a href="{{ path('adstacy_app_ad_delete', {id: ad.id}) }}" class="label-group delete" data-modal-header="{{"ads.delete.confirm_title"|trans}}" data-modal-body="{{"ads.delete.confirm_message"|trans}}" data-modal-delete="{{"ads.delete.button"|trans}}">
+                <a href="{{ path('adstacy_app_ad_delete', {id: ad.id}) }}" class="label-group delete">
                   <i class="icon icon-delete"></i><span class="text owner-action-label">{{ "delete"|trans }}</span>
                 </a>
               </li>
