--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -190,17 +190,7 @@
     {% endblock %}
 
     {% block javascripts %}
-      {% if not app.debug %}
-      <script type="text/javascript">
-        (function() {
-          // google analytics
-          var ga = document.createElement('script');     ga.type = 'text/javascript'; ga.async = true;
-          ga.src = ('https:'   == document.location.protocol ? 'https://ssl'   : 'http://www') + '.google-analytics.com/ga.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-
-        })();
-      </script>
-      {% endif %}
+      <script type="text/javascript" src="{{ asset('js/translations.' ~ app.request.locale ~ '.js') }}"></script>
       {% javascripts filter='uglifyjs2'
         '@AdstacyAppBundle/Resources/public/js/json2.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
@@ -216,14 +206,23 @@
         '@AdstacyAppBundle/Resources/public/js/lightbox.min.js'
         '@AdstacyAppBundle/Resources/public/js/easing.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
+        'bundles/funddyjstranslations/js/lib/funddytranslations.js'
         '@AdstacyAppBundle/Resources/public/js/templates.js'
         '@AdstacyAppBundle/Resources/public/js/adstacy.js'
         '@AdstacyAppBundle/Resources/public/js/app/*'
       %}
         <script src="{{ asset_url }}" type="text/javascript"></script>
       {% endjavascripts %}
+
       {% if not app.debug %}
       <script type="text/javascript">
+        (function() {
+          // google analytics
+          var ga = document.createElement('script');     ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:'   == document.location.protocol ? 'https://ssl'   : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+
+        })();
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         var firstScriptTag = document.getElementsByTagName('script')[0];
