Fixed follow unfollow hover state max width.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -55,7 +55,7 @@ a.mention:hover {
 
 .follow-user,
 .unfollow-user {
-  min-width: 80px;
+  max-width: 80px;
 }
 
 @media screen and (max-width: 480px) {
