Change users heading border color.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -11,7 +11,7 @@
     font-size: 18px;
     padding: 12px 10px;
     margin: 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #ddd;
   }
 }
 
