Remove extra border from friend friends

--- a/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
@@ -16,7 +16,7 @@
       <a href="{{ path('adstacy_app_who_to_follow_facebook') }}" class="facebook" title="{{"find_friends"|trans}}">{{"find_friends_facebook"|trans}}</a>
       <a href="{{ path('adstacy_app_who_to_follow_twitter') }}" class="twitter" title="{{"find_friends_twitter"|trans}}">{{"find_friends_twitter"|trans}}</a>
     </div>
-    <div class="jscroll users clearfix">
+    <div class="jscroll users clearfix no-border">
       {{ block('ajax_content') }}
     </div>
   </div>
