--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -4,18 +4,6 @@
   white-space: nowrap;
 }
 
-.w1 { width: 10%; }
-.w2 { width: 20%; }
-.w3 { width: 30%; }
-.w4 { width: 40%; }
-.w5 { width: 50%; }
-.w6 { width: 60%; }
-.w7 { width: 70%; }
-.w8 { width: 80%; }
-.w9 { width: 90%; }
-
-.w25 { width: 25%; }
-
 .btn-icon {
   background-color: transparent;
   border: none;
@@ -48,19 +36,6 @@ span.required {
   color: #999;
 }
 
-/* unused
-.h-stack {
-  display: table;
-  width: 100%;
-
-  > .stack-item {
-    display: table-cell;
-    vertical-align: top;
-  }
+.no-border {
+  border: 0 !important;
 }
-
-.space {
-  width: 30px;
-  display: inline-block;
-}
-*/
