Fixed navbar border to border bottom only.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -164,7 +164,7 @@ body {
 }
 
 .navbar {
-  border: 1px solid @border-color;
+  border-bottom: 1px solid @border-color;
   .box-shadow(0 1px 1px #ddd);
 }
 
