Fix search layout.

--- a/src/Adstacy/AppBundle/Resources/views/Search/search.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/search.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Search{% endblock %}
 
 {% block content %}
-  {% block search_content %}{% endblock %}
+  <div class="adstacy-container">
+    {% block search_content %}{% endblock %}
+  </div>
 {% endblock %}
