Changed ad styles.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -72,9 +72,10 @@
 }
 
 .advert-tags {
+  font-size: 13px;
   margin-top: 5px;
   a {
-    color: #777;
+    color: #999;
   }
 }
 
@@ -86,6 +87,7 @@
 }
 
 .advert-desc {
+  font-size: 12px;
   margin: 0;
   .hyphens();
 }
@@ -127,7 +129,6 @@
 
     span {
       display: block;
-      font-weight: bold;
     }
   }
 }
@@ -225,11 +226,13 @@
 
 
 .load-more-comments {
-  padding: 3px 0 0 0;
+  font-size: 13px;
+  font-weight: bold;
+  padding: 3px 0 3px 0;
   text-align: center;
   height: 23px;
   a {
-    color: @bootstrap-blue;
+    color: #999;
   }
 }
 
