--- a/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
@@ -1,31 +1,29 @@
 #who-to-follow {
   width: 500px;
   .toolbar {
+    border-radius: 3px 3px 0 0;
+    border-bottom: 1px solid #ddd;
+    background-color: #fff;
     margin-bottom: 5px;
   }
   .adstacy, .twitter, .facebook {
     display: block;
     float: left;
     margin: 0;
-    padding: 5px 10px;
+    padding: 12px 10px 10px;
   }
   .adstacy {
-    border-radius: 3px 0 0 0;
-    color: #fff;
-    background-color: #b00;
-    width: 166px;
-  }
-  .twitter {
-    border-radius: 0 3px 0 0;
-    color: #fff;
-    background-color: #2daddc;
-    border-color: #0271bf;
+    border-right: 1px solid #ddd;
+    color: #b00;
     width: 166px;
   }
   .facebook {
-    color: #fff;
-    background-color: #133783;
-    border-color: #133783;
+    border-right: 1px solid #ddd;
+    color: #133783;
     width: 168px;
+  }
+  .twitter {
+    color: #0271bf;
+    width: 166px;
   }
 }
