Style who to follow.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
@@ -16,14 +16,26 @@
     border-right: 1px solid #ddd;
     color: #b00;
     width: 166px;
+    &.current {
+      background: #b00;
+      color: #fff;
+    }
   }
   .facebook {
     border-right: 1px solid #ddd;
     color: #133783;
     width: 168px;
+    &.current {
+      background: #133783;
+      color: #fff;
+    }
   }
   .twitter {
     color: #0271bf;
     width: 166px;
+    &.current {
+      background: #0271bf;
+      color: #fff;
+    }
   }
 }
