--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -88,7 +88,7 @@
 
 .advert-desc {
   font-size: 12px;
-  margin: 0;
+  margin: 10px 0 0;
   .hyphens();
 }
 
@@ -248,6 +248,10 @@
 }
 
 .advert-user {
+  .media-body {
+    line-height: 1;
+  }
+
   time {
     color: #aaa;
     font-size: 12px;
