fix follow btn.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -55,7 +55,7 @@ a.mention:hover {
 
 .follow-user,
 .unfollow-user {
-  max-width: 80px;
+  min-width: 80px;
 }
 
 @media screen and (max-width: 480px) {
@@ -135,7 +135,7 @@ a.mention:hover {
 
 .advert-action .btn-success:hover,
 .user-action .btn-success:hover {
-  background-color: #333;
+  background: #333;
   border-color: #333;
 }
 
