--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -46,16 +46,6 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
-
-    h3 {
-      font-size: 11px;
-      color: #bbb;
-      margin-bottom: 5px;
-      font-weight: bold;
-      padding: 5px 20px;
-      white-space: nowrap;
-    }
-
     a {
       font-size: 12px;
       color: #666;
@@ -77,6 +67,16 @@ body {
       margin-bottom: 20px;
     }
   }
+  h3 {
+    font-size: 11px;
+    color: #bbb;
+    margin-bottom: 5px;
+    font-weight: bold;
+    padding: 5px 20px;
+    white-space: nowrap;
+    margin-top: 5px;
+  }
+
   .current {
     a {
       background: @brand-primary;
@@ -91,8 +91,7 @@ body {
 }
 
 .site-user-menu {
-  padding: 20px;
-  padding-bottom: 0;
+  padding: 20px 20px 10px 20px;
   white-space: nowrap;
   line-height: 1;
 
@@ -144,6 +143,9 @@ body {
   float: left;
   display: inline;
   position: relative;
+  top: 2px;
+  margin-top: -2px;
+  border-bottom: 2px solid transparent;
   padding: 12px 15px;
 
   .icon-bar {
@@ -173,13 +175,11 @@ body {
       padding: 0 2px;
     }
   }
-  a span {
-    display: none;
-  }
   .nav > li {
     position: relative;
     float: left;
   }
+
 }
 
 .navbar-brand {
@@ -191,6 +191,11 @@ body {
 
 #m-btn-search {
   display: block;
+  border-bottom: 2px solid transparent;
+
+  &:hover {
+    border-color: @blue-accent;
+  }
 }
 
 #search-form {
