change loader img.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -183,12 +183,12 @@ a.mention:hover {
   }
 }
 
-// .loader-img {
-//   width: 32px;
-//   height: 32px;
-//   margin: 0 auto 20px;
-//   background-image: url(@loader-img);
-// }
+.loader-img {
+  width: 32px;
+  height: 32px;
+  margin: 0 auto 20px;
+  background-image: url("../img/loader-alt.gif");
+}
 
 @media (max-width: 480px) {
   #toTop {
