fix broadcast btn.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -257,3 +257,12 @@
     font-size: 12px;
   }
 }
+
+.promote,
+.unpromote {
+  min-width: 110px;
+}
+
+.unpromote:hover {
+  color: @gray-light;
+}
