--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -47,10 +47,10 @@
       <div class="btn-group pull-left">
         {% set promoted = app.user.hasPromote(ad) %}
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast">
-          <i class="icon icon-bullhorn"></i><span>broadcast</span>
+          <i class="icon icon-bullhorn"></i><span class="text">broadcast</span>
         </a>
         <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Broadcasted">
-          <i class="icon icon-bullhorn"></i><span>broadcasted</span>
+          <i class="icon icon-bullhorn"></i><span class="text">broadcasted</span>
         </a>
       </div>
     {% endif %}
