Implement other broadcast feature.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -120,8 +120,7 @@
   }
 
   a {
-    text-transform: uppercase;
-    font-size: 10px;
+    font-size: 12px;
 
     .icon {
       font-size: 16px;
@@ -157,6 +156,16 @@
   .advert-share, .advert-comment {
     padding: 10px 15px;
     border-top: 1px solid @border-color;
+  }
+}
+
+.advert-broadcasts {
+  padding: 13px 10px; 
+  width: 295px;
+  color: #aaa;
+  a {
+    font-size: 14px;
+    color: @bootstrap-blue;
   }
 }
 
