--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -10,6 +10,8 @@
 @link-primary:                @brand-primary;
 @link-secondary:              #888;
 
+@bootstrap-blue:              #428bca;
+
 @text-primary:                #333;
 @text-secondary:              #888;
 
