--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -43,6 +43,7 @@
   {% endif %}
 
   <div class="advert-action clearfix">
+    {% set promoted = null %}
     {% if app.user %}
       <div class="btn-group pull-left">
         {% set promoted = app.user.hasPromote(ad) %}
@@ -52,6 +53,22 @@
         <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Broadcasted">
           <i class="icon icon-bullhorn"></i><span class="text">broadcasted</span>
         </a>
+      </div>
+    {% endif %}
+    {% set lastPromotees = ad.getLastPromotees(3) %}
+    {% set cntLastPromotees = lastPromotees|length %}
+    {% set promoteesCount = ad.promoteesCount %}
+    {% if cntLastPromotees > 0 %}
+      <div class="advert-broadcasts pull-left text-overflow">
+        {% for index, promotee in lastPromotees %}
+        <a href="{{ path('adstacy_app_user_profile', {username: promotee}) }}">{{ promotee }}</a>{% if index != cntLastPromotees - 1 %}{% if promoteesCount > cntLastPromotees %},{% else %} and {% endif %}{% endif %}
+        {% endfor %}
+        <span>
+        {% if promoteesCount > cntLastPromotees %}
+          {{"ads.other_promotes"|trans({'%count%': promoteesCount - cntLastPromotees })|raw}}
+        {% endif %}
+        broadcast this
+        </span>
       </div>
     {% endif %}
     <div class="btn-group pull-right">
