Trending and friend suggestion on sidebar.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -169,20 +169,32 @@
             <div class="site-sidebar">
               {% block sidebar %}
               <div class="site-aside">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quo, ipsam,
-                  temporibus, nulla voluptate vero numquam porro necessitatibus libero molestias
-                  natus alias repellat aliquid neque asperiores vitae beatae voluptates nobis
-                  excepturi aut labore quia fugiat eaque corrupti rem velit deserunt.
-                </p>
+                <h2>Trending</h2>
+                <img class="side-trending-img" src="http://adstacy.dev/app_dev.php/media/cache/thumbnail/uploads/5270a78865a64.jpeg" />
               </div>
-              <div class="site-aside">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quo, ipsam,
-                  temporibus, nulla voluptate vero numquam porro necessitatibus libero molestias
-                  natus alias repellat aliquid neque asperiores vitae beatae voluptates nobis
-                  excepturi aut labore quia fugiat eaque corrupti rem velit deserunt.
-                </p>
+              <div id="side-suggest-friend" class="site-aside">
+                <h2>People You May Know</h2>
+                <div class="media">
+                  <a href="#" class="pull-left"><img src="/bundles/adstacyapp/img/nophoto.gif" alt="suwandi" width="32" height="32" class="media-object" /></a>
+                  <div class="media-body">
+                    <a class="username" href="#">Suwandi Halim</a>
+                    <a class="btn btn-primary btn-sm">Follow</a>
+                  </div>
+                </div>
+                <div class="media">
+                  <a href="#" class="pull-left"><img src="/bundles/adstacyapp/img/nophoto.gif" alt="suwandi" width="32" height="32" class="media-object" /></a>
+                  <div class="media-body">
+                    <a class="username" href="#">Welly Huang</a>
+                    <a class="btn btn-primary btn-sm">Follow</a>
+                  </div>
+                </div>
+                <div class="media">
+                  <a href="#" class="pull-left"><img src="/bundles/adstacyapp/img/nophoto.gif" alt="suwandi" width="32" height="32" class="media-object" /></a>
+                  <div class="media-body">
+                    <a class="username" href="#">Erwin Cyrus</a>
+                    <a class="btn btn-primary btn-sm">Follow</a>
+                  </div>
+                </div>
               </div>
               {% endblock %}
             </div>
