--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -41,7 +41,7 @@
 // Components w/ JavaScript
 @import "@{path}/modals.less";
 @import "@{path}/tooltip.less";
-// @import "@{path}/popovers.less";
+@import "@{path}/popovers.less";
 // @import "@{path}/carousel.less";
 
 // Utility classes
@@ -55,6 +55,7 @@
 @import "./base/layout.less";
 
 @import "./layout/site-header.less";
+@import "./layout/site-sidebar.less";
 @import "./layout/ad.less";
 @import "./layout/feeds.less";
 @import "./layout/show_ad.less";
