Small style update.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -82,6 +82,7 @@
 .advert-detail {
   border-top: 1px solid @border-color;
   border-bottom: 1px solid @border-color;
+  margin-bottom: 5px;
   box-shadow: 0 3px 4px rgba(0,0,0,0.175);
   padding: 10px 15px;
 }
