--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -72,6 +72,9 @@
 #show-all-notifications a {
   background-color: #f5f5f5;
   text-align: center;
+  &:hover {
+    background-color: #eee;
+  }
 }
 
 #all-notifications {
