Fix stream twig code

--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -6,7 +6,10 @@
 
 {% block content %}
   {% if user.followingsCount <= 0 %}
-    {{ block('ajax_content') }}
+    <div class="clearfix users no-border">
+      <h2>{{"who_to_follow_getting_started"|trans}}</h2>
+      {{ block('ajax_content') }}
+    </div>
   {% else %}
     <div class="jscroll adstacy-container">
       {{ block('ajax_content') }}
@@ -16,12 +19,9 @@
 
 {% block ajax_content %}
   {% if user.followingsCount <= 0 %}
-    <div class="clearfix users">
-      <h2>{{"who_to_follow_getting_started"|trans}}</h2>
       {% for user in users %}
         {% include 'AdstacyAppBundle:User:user.html.twig' with {user: user} %}
       {% endfor %}
-    </div>
   {% else %}
     {% set id = null %}
     {% for ad in ads %}
