Change .user hover style

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -48,6 +48,13 @@
   }
   &:hover {
     background-color: #eee;
+    box-shadow: 0 0 3px #333;
+    .realname, .username {
+      color: @brand-primary;
+    }
+    .media-heading a:not(.btn) {
+      color: #666; 
+    }
   }
 }
 
