--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -69,6 +69,9 @@
     text-align: center;
     margin: 0 0 15px 0;
   }
+  .advert-tags a {
+    color: #aaa;
+  }
 }
 
 .advert-tags {
@@ -82,7 +85,7 @@
 .advert-detail {
   border-top: 1px solid @border-color;
   border-bottom: 1px solid @border-color;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
   box-shadow: 0 3px 4px rgba(0,0,0,0.175);
   padding: 10px 15px;
 }
@@ -95,7 +98,7 @@
 
 .advert-action {
   background: #f2f2f2;
-  border-top: 1px solid @border-color;
+  border-bottom: 1px solid @border-color;
 
   .btn {
     height: 46px;
