--- a/src/Adstacy/AppBundle/Resources/public/less/overrides.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/overrides.less
@@ -30,3 +30,24 @@
   background-image: -o-linear-gradient(top, #f62b2b, #d20202);
   background-image: linear-gradient(to bottom, #f62b2b, #d20202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f62b2b, endColorstr=#d20202)
 }
+
+#adstacy {
+  .tt-dropdown-menu {
+    border-top: 1px solid rgba(0,0,0,0.15);
+    padding: 6px 0;
+  }
+  .tt-dropdown-header {
+    border: 0;
+    color: #bbb;
+    font-size: 11px;
+    font-weight: bold;
+    padding: 6px 12px;
+    text-align: left;
+  }
+  .tt-suggestion a {
+    color: #333;
+    display: block;
+    font-size: 14px;
+    padding: 0 0 0 12px;
+  }
+}
