--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -21,12 +21,50 @@
   }
 }
 
+.advert-object {
+  position: relative;
+  overflow: hidden;
+  max-height: 9999px;
+  .transition(max-height ease .2s);
+}
+
+.advert-object.limit {
+  max-height: @advert-limit !important;
+  .transition(max-height ease .2s);
+}
+
+.advert-expand {
+  position: absolute;
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  bottom: 0;
+  font-size: 30px;
+  line-height: 1;
+  color: rgba(255,255,255,.5);
+  #gradient > .vertical(rgba(0,0,0,0), rgba(0,0,0,.3));
+
+  &:hover {
+    text-decoration: none;
+    color: #fff;
+    text-shadow: 0 0 5px #fff;
+    background: rgba(0,0,0,.5);
+  }
+}
+
+.advert-expand.icon:before {
+  content: "\e627";
+}
+.advert-expand.collapsed.icon:before {
+  content: "\e628";
+}
+
 .advert-img {
   background-color: #000;
   border-radius: 5px 5px 0 0;
+  background: #000 url("../img/loader.gif") no-repeat center;
 
   img {
-    background: url("../img/loader.gif") no-repeat center;
     display: block;
     max-width: 100%;
     margin: 0 auto;
@@ -164,7 +202,7 @@
 }
 
 .advert-broadcasts {
-  padding: 13px 10px; 
+  padding: 13px 10px;
   width: 295px;
   color: #aaa;
   a {
@@ -277,5 +315,6 @@
 }
 
 .unpromote:hover {
+  margin-left: 0;
   color: @gray-light;
 }
