--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -7,38 +7,40 @@
 {% set commentsLength = _comments|length %}
 {% set commentsLeft = ad.commentsCount - commentsLength %}
 <div class="advert" data-username="{{ ad.user.username }}">
-  {% if ad.type == 'image' %}
-    {% set width = ad.imageWidth %}
-    {% if ad.imageWidth >= thumb_width %}
-      {% set width = thumb_width %}
-    {% endif %}
-    {% set height = ad.imageHeight(width) %}
-    <div class="advert-img" style="height: {{ height }}px;">
-      <img class="lazy {% if ad.imageWidth >= thumb_width %}full{% endif %}" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
-        data-original="{{ vich_uploader_asset(ad, 'image') }}"
-        width="{{ width }}" height="{{ height }}">
-    </div>
-  {% elseif ad.type == 'text' %}
-    <div class="advert-text">
-      <h3>{{ ad.title }}</h3>
-      <p>{{ ad.description|raw }}</p>
-      <div class="advert-tags">
-        {% for tag in ad.tags %}
-          <a href="{{ path('adstacy_app_search', {q: tag}) }}">#{{tag}}</a>
-        {% endfor %}
+  <div class="advert-object limit">
+    {% if ad.type == 'image' %}
+      {% set width = ad.imageWidth %}
+      {% if ad.imageWidth >= thumb_width %}
+        {% set width = thumb_width %}
+      {% endif %}
+      {% set height = ad.imageHeight(width) %}
+      <div class="advert-img">
+        <img class="lazy {% if ad.imageWidth >= thumb_width %}full{% endif %}" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
+          data-original="{{ vich_uploader_asset(ad, 'image') }}"
+          width="{{ width }}" height="{{ height }}">
       </div>
-    </div>
-  {% elseif ad.type == 'youtube' %}
-    <div class="advert-video" data-youtube-id="{{ ad.youtubeId }}">
-      <a href="#">
-        <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
-          data-original="http://img.youtube.com/vi/{{ ad.youtubeId }}/0.jpg"
-          width="{{ thumb_width }}" height="{{ thumb_width * (9/16) }}"
-        >
-      </a>
-      <div class="yt-player"></div>
-    </div>
-  {% endif %}
+    {% elseif ad.type == 'text' %}
+      <div class="advert-text">
+        <h3>{{ ad.title }}</h3>
+        <p>{{ ad.description|raw }}</p>
+        <div class="advert-tags">
+          {% for tag in ad.tags %}
+            <a href="{{ path('adstacy_app_search', {q: tag}) }}">#{{tag}}</a>
+          {% endfor %}
+        </div>
+      </div>
+    {% elseif ad.type == 'youtube' %}
+      <div class="advert-video" data-youtube-id="{{ ad.youtubeId }}">
+        <a href="#">
+          <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
+            data-original="http://img.youtube.com/vi/{{ ad.youtubeId }}/0.jpg"
+            width="{{ thumb_width }}" height="{{ thumb_width * (9/16) }}"
+          >
+        </a>
+        <div class="yt-player"></div>
+      </div>
+    {% endif %}
+  </div>
 
   <div class="advert-detail">
     <div class="advert-user media">
