Fix create ad tags.

--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -21,7 +21,7 @@
 {% spaceless %}
     {% if errors|length > 0 %}
       {% for error in errors %}
-      <div class="alert alert-warning alert-dismissable">
+      <div class="alert alert-error alert-dismissable">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         <strong>Warning</strong>! {{ error.message }}
       </div>
