--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -83,7 +83,7 @@
     {% if cntLastPromotees > 0 %}
       <div class="advert-broadcasts pull-left text-overflow">
         {% for index, promotee in lastPromotees %}
-        <a href="{{ path('adstacy_app_user_profile', {username: promotee}) }}">{{ promotee }}</a>{% if index != cntLastPromotees - 1 %}{% if promoteesCount > cntLastPromotees %},{% else %} and {% endif %}{% endif %}
+          <a href="{{ path('adstacy_app_user_profile', {username: promotee}) }}">{{ promotee }}</a>{% if index != cntLastPromotees - 1 %}{% if promoteesCount > cntLastPromotees or (promoteesCount == cntLastPromotees and index != cntLastPromotees - 2) %},{% else %} and {% endif %}{% endif %}
         {% endfor %}
         <span>
         {% if promoteesCount > cntLastPromotees %}
