Fix mobile header.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -143,9 +143,6 @@ body {
   float: left;
   display: inline;
   position: relative;
-  top: 2px;
-  margin-top: -2px;
-  border-bottom: 2px solid transparent;
   padding: 12px 15px;
 
   .icon-bar {
@@ -159,8 +156,7 @@ body {
   }
 
   &:hover {
-    background-color: transparent;
-    border-color: @brand-primary;
+    background-color: #eee;;
   }
 }
 
@@ -191,10 +187,10 @@ body {
 
 #m-btn-search {
   display: block;
-  border-bottom: 2px solid transparent;
 
   &:hover {
-    border-color: @blue-accent;
+    background-color: @blue-accent;
+    color: #fff;
   }
 }
 
