--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -68,8 +68,7 @@
   border-radius: 5px 5px 0 0;
 
   img {
-    display: block;
-    max-width: 100%;
+    .img-responsive(block);
     margin: 0 auto;
   }
 
